--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "vue-scroll-class",
   "version": "1.1.1-alpha1",
   "description": "A Vue directive to easily add and remove a class from an element when the screen is scrolled past a given point",
-  "files": ["source", "dist"],
+  "files": [
+    "source",
+    "dist"
+  ],
   "main": "dist/vue-scroll-class.js",
   "keywords": [
     "vue-directive",
@@ -16,6 +19,8 @@
     "url": "https://github.com/jasepellerin/vue-scroll-class"
   },
   "scripts": {
+    "build": "webpack -p",
+    "test": "karma start test/karma.conf.js --single-run",
     "prepublish": "webpack -p"
   },
   "author": "Jase Pellerin <jasepellerin@gmail.com> (http://jasepellerin.com)",
@@ -31,6 +36,14 @@
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jasmine": "^2.8.4",
+    "expect.js": "^0.3.1",
+    "karma": "^1.7.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-webpack": "^2.0.4",
+    "mocha": "^3.5.0",
+    "vue": "^2.4.2",
     "webpack": "^2.6.1"
   }
 }
