--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jasmine": "^2.8.4",
+    "eslint-plugin-mocha": "^4.11.0",
     "expect.js": "^0.3.1",
     "karma": "^1.7.0",
     "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-webpack": "^2.0.4",
     "mocha": "^3.5.0",
