--- a/test/.eslintrc.yml
+++ b/test/.eslintrc.yml
@@ -1,12 +1,12 @@
 extends: airbnb-base
 plugins:
   - import
-  - jasmine
+  - mocha
 env:
   browser: true
-  jasmine: true
-  node: true
   es6: true
+  mocha: true
+  node: true
 rules: 
   max-len: [1, 80, 2]
   import/no-extraneous-dependencies: [error, { devDependencies: true }]
