--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,6 +7,8 @@ env:
   es6: true
 rules: 
   max-len: [1, 80, 2]
+  no-console: ["warn"]
+  no-alert: ["warn"]
 parserOptions:
   ecmaVersion: 2017
   sourceType: "module"
